force-app/main/default/objects/bpats__Interview_Template__c/bpats__Interview_Template__c.object-meta.xml
<CustomObject>
    <label>Interview Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>