force-app/main/default/objects/bpats__Interview_Template__c/fields/bpats__Feedback_Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>bpats__Feedback_Picklist_Options__c</fullName>
    <label>Feedback Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>