force-app/main/default/objects/bpats__Interview_Template__c/fields/bpats__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>bpats__Filter_Criteria__c</fullName>
    <label>Filter Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>