force-app/main/default/objects/bpats__Interview_Template__c/fields/bpats__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>